--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Christian life'
 - !lcsh 'Young women -- Conduct of life -- Fiction'
+- GITenberg
 title: Discipline
 url: http://www.gutenberg.org/ebooks/38510
